# backend/controller/url_shortener.go
@@ -5,9 +5,11 @@ import (
 	"fmt"
 	"math/rand"
 	"net/http"
+	"os"
 
 	"github.com/Endesapt/url_shortener_go/httputil"
 	"github.com/redis/go-redis/v9"
+	idtoken "google.golang.org/api/idtoken"
 
 	"github.com/Endesapt/url_shortener_go/models"
 	"github.com/gin-gonic/gin"
@@ -15,7 +17,7 @@ import (
 
 // @Summary      Shorten URL
 // @Description  Shortens your  URL to small format for you to use it
-// @Tags         shortenURL
+// @Tags         ShortenURL
 // @Accept       json
 // @Produce      json
 // @Param        url    query     string  true "Shorten URL"
@@ -25,7 +27,14 @@ import (
 // @Router       /api/v1/shortenURL [post]
 func (c *Controller) ShortenUrl(ctx *gin.Context) {
 	url := ctx.Request.URL.Query().Get("url")
-	id := GenerateRandString()
+	resultUrl := models.UrlShortenResponse{}
+
+	id := GenerateRandString(10)
+
+	if userId, err := GetUserId(ctx); err == nil {
+		c.RedisClient.SAdd(ctx.Request.Context(), "links:"+userId, id)
+		c.RedisClient.HSet(ctx.Request.Context(), id, "issuerID", userId)
+	}
 
 	err := c.RedisClient.HSet(ctx.Request.Context(), id, "originalUrl", url).Err()
 	if err != nil {
@@ -42,16 +51,13 @@ func (c *Controller) ShortenUrl(ctx *gin.Context) {
 	}
 
 	newLink := fmt.Sprintf("%s://%s/link/%s", scheme, ctx.Request.Host, id)
-
-	resultUrl := models.UrlShortenResponse{
-		ShortURL: newLink,
-	}
+	resultUrl.ShortURL = newLink
 	ctx.JSON(http.StatusOK, resultUrl)
 }
 
 // @Summary      Info about shorten URL
 // @Description  Get info about how many times and what IPs where entering your site
-// @Tags         shortenURL
+// @Tags         ShortenURL
 // @Accept       json
 // @Produce      json
 // @Param        id    path     string  true "id"
@@ -63,7 +69,7 @@ func (c *Controller) GetInfo(ctx *gin.Context) {
 	var (
 		urlInfo models.UrlInfoResponse
 	)
-	if err := c.RedisClient.HMGet(ctx.Request.Context(), id, "count", "originalUrl").Scan(&urlInfo); err != nil {
+	if err := c.RedisClient.HMGet(ctx.Request.Context(), id, "count", "originalUrl", "issuerID").Scan(&urlInfo); err != nil {
 		panic(err)
 	}
 
@@ -79,7 +85,7 @@ func (c *Controller) GetInfo(ctx *gin.Context) {
 
 // @Summary      Redirect to link
 // @Description  Redirects to link that you have enetered on shortenURL path
-// @Tags         shortenURL
+// @Tags         ShortenURL
 // @Accept       json
 // @Produce      json
 // @Param        id    path     string  true "id"
@@ -108,16 +114,48 @@ func (c *Controller) RedirectURL(ctx *gin.Context) {
 
 }
 
-func GenerateRandString() string {
+// @Summary      Get all links
+// @Description  Get all links that associated your account if you are registered
+// @Tags         ShortenURL
+// @Accept       json
+// @Produce      json
+// @Success      200  {array} string
+// @Failure      403  {object}  httputil.HTTPError
+// @Router       /api/v1/getLinks [get]
+func (c *Controller) GetLinks(ctx *gin.Context) {
+	userId, idErr := GetUserId(ctx)
+	if idErr != nil {
+		httputil.NewError(ctx, http.StatusForbidden, idErr)
+	}
+	values, err := c.RedisClient.SMembers(ctx.Request.Context(), "links:"+userId).Result()
+	if err != nil {
+		panic(err)
+	}
+
+	ctx.JSON(http.StatusOK, values)
+}
+
+func GenerateRandString(n int) string {
 
 	// Define the character set
 	charSet := "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
 
-	// Generate a random sequence of 8 letters
-	randomSequence := make([]byte, 8)
+	randomSequence := make([]byte, n)
 	for i := range randomSequence {
 		randomSequence[i] = charSet[rand.Intn(len(charSet))]
 	}
 
 	return string(randomSequence)
+}
+
+func GetUserId(ctx *gin.Context) (string, error) {
+	userIdToken, err := ctx.Request.Cookie("IDtoken")
+	if err == nil {
+		accessToken := userIdToken.Value
+		payload, err := idtoken.Validate(ctx.Request.Context(), accessToken, os.Getenv("AUTH_CLIENT_ID"))
+		if err == nil {
+			return payload.Subject, nil
+		}
+	}
+	return "", err
 }
